--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="./script.js" defer=""></script>
     <link rel="stylesheet" href="./style.css">
+    <title>Bola de cristal</title>
   </head>
 
   <body>
